--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="hero-unit">
   <h1>James Magnarelli</h1>
-  <p>I'm still working on this site, and am testing my deployment systems.</p>
+  <p>I'm still working on this site, and will be adding more content soon.</p>
   <p>In the meantime, here are some other places you can find me:</p>
   <ul>
       <li ng-repeat="thing in awesomeThings">
