--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,25 @@
-<div class="hero-unit">
-  <h1>James Magnarelli</h1>
-  <p>I'm still working on this site, and will be adding more content soon.</p>
-  <p>In the meantime, here are some other places you can find me:</p>
-  <ul>
-      <li ng-repeat="thing in awesomeThings">
-          <a href="{{thing[1]}}">{{thing[0]}}</a>
-      </li>
-  </ul>
+<div class="container">
+
+  <div class="row">
+    <div class="large-4 columns">
+        <img src="misc/self.jpg">
+    </div>
+    <div class="large-8 columns ">
+        <p>I'm a software developer, a junior computer science major at <a href="http://www.ccs.northeastern.edu">Northeastern</a>, and a system administrator at <a href="http://www.northeastern.edu/resnet">ResNet</a>. I like to make things and talk to customers. </p>
+        <p>See <a href="#/whatlike">what I like</a>, <a href="#/thingsdone">what I've done</a>, or <a href="#/contact">contact information.</a></p>
+        <!--
+        <div class="row">
+            <div class="large-6 columns">
+                <p></p>
+            </div>
+            <div class="large-6 columns">
+                <ul class="nobullet">
+                    <li ng-repeat="thing in awesomeThings">
+                        <a href="{{thing[1]}}">{{thing[0]}}</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        -->
+  </div>
 </div>
