Build contact page

--- a/app/styles/mystyles.css
+++ b/app/styles/mystyles.css
@@ -10,6 +10,10 @@ h1, h2, h3, h4, h5, h6 {
     background: #3f92d2;
 }
   */
+#linkedin-button {
+    margin-bottom: 0.5em;
+}
+
 #jumbo_text1 {
     color: #fff;
 }
