--- a/app/styles/mystyles.css
+++ b/app/styles/mystyles.css
@@ -1,6 +1,14 @@
 /* 
  * Some shizzle
  */
+
+.background {
+    background-color: #f5f5f5;
+}
+
+#my-social-buttons {
+    margin-top: 1.5em;
+}
 h1, h2, h3, h4, h5, h6 {
     color: #5e5e5e;
     font-family: Gibson-Regular;
