--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
     <div class="large-4 columns">
         <img src="misc/self.jpg">
     </div>
-    <div class="large-8 columns ">
+    <div class="large-8 columns panel descriptive-text">
         <p>I'm a software developer, a junior computer science major at <a href="http://www.ccs.northeastern.edu">Northeastern</a>, and a system administrator at <a href="http://www.northeastern.edu/resnet">ResNet</a>. I like to make things and talk to customers. </p>
         <p>See <a href="#/whatlike">what I like</a>, <a href="#/whatdone">what I've done</a>, or <a href="misc/newresume.pdf">my resume.</a></p>
         <!--
