--- a/app/views/whatlike.html
+++ b/app/views/whatlike.html
@@ -4,7 +4,7 @@
     <div class="large-4 columns">
         <img src="misc/self.jpg">
     </div>
-    <div class="large-8 columns ">
+    <div class="large-8 columns panel descriptive-text">
         <p>This page should be up soon. In the meantime, see more information <a href="#/contact">here.</a></p>
   </div>
 </div>
