--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,14 @@
 <div class="container">
 
   <div class="row">
+    <!--
     <div class="large-4 columns">
         <img src="misc/self.jpg">
     </div>
-    <div class="large-8 columns panel descriptive-text">
-        <p>I'm a software developer, a junior computer science major at <a href="http://www.ccs.northeastern.edu">Northeastern</a>, and a system administrator at <a href="http://www.northeastern.edu/resnet">ResNet</a>. I like to make things and talk to customers. </p>
+-->
+    <div class="large-12 columns info-panel descriptive-text">
+        <p>I'm a software developer, a senior computer science major at <a href="http://www.ccs.northeastern.edu">Northeastern</a>, and a Co-op Software Engineer at <a href="http://www.hubspot.com">HubSpot</a>.</p>
+        <p>I'm happiest building new things and rapidly iterating with customers.</p>
         <p>See <a href="whatlike.html">what I like</a>, <a href="#/whatdone">what I've done</a>, or <a href="resumepage.html">my resume.</a></p>
         <!--
         <div class="row">
