--- a/app/styles/mystyles.css
+++ b/app/styles/mystyles.css
@@ -9,8 +9,9 @@
 }
 
 body {
-    margin-top: 11%;
+    margin-top: 18%;
     color: #333;
+    font-family: lato, Voces;
 }
 
 
@@ -18,8 +19,11 @@ body {
 .background-old {
     background-color: #f5f5f5;
 }
-.background {
+.background-old {
     background-color: rgb(230, 222, 220);
+}
+.background {
+    background-color: #252525;
 }
 .link {
     stroke: #ccc;
@@ -35,7 +39,7 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
     color: #5e5e5e;
-    font-family: Gibson-Regular;
+    margin-bottom: 0.4rem;
 }
 /*
 .container-thing {
@@ -52,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .regular-link {
     color: #474747;
-    font-family: Voces;
+    font-family: lato, Voces;
 }
 
 .nav-link {
@@ -64,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 0.25rem;
     margin-right: 0.25rem;
     border-radius: 5px;
-    background-color: #000;
+    background-color: #0975FF;
     width: 6rem;
     height:1.8rem;
     overflow: hidden;
@@ -93,9 +97,12 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
+#name-header h1 {
+    margin-bottom: 0.4rem;
+}
 #name-header span {
-    margin-bottom: 0.5rem;
-    color: #123484;
+    font-family: Lato, Voces;
+    color: #EFEFEF;
     display: inline-block;
     opacity: 0;
     transition: -webkit-transform 800ms, opacity 800ms;
