--- a/app/sass/custom_styles.sass
+++ b/app/sass/custom_styles.sass
@@ -191,6 +191,13 @@ a
   max-height: 10em
   margin-bottom: 0.3em
 
+.screencap
+  width: 100%
+  height: 100%
+  max-width: 18em
+  max-height: 15em
+  margin-bottom: 0.3em
+
 .job-descr
   display: inline-block
   font-size: 0.85em
