Add titles for personal projects:

--- a/app/sass/custom_styles.sass
+++ b/app/sass/custom_styles.sass
@@ -198,6 +198,10 @@ a
   max-height: 15em
   margin-bottom: 0.3em
 
+.project-descr
+  h4
+    color: #e6dedc
+
 .job-descr
   display: inline-block
   font-size: 0.85em
