--- a/app/styles/custom_styles.css
+++ b/app/styles/custom_styles.css
@@ -270,7 +270,12 @@ a:hover, a:focus {
   margin-bottom: 0.3em;
 }
 
-/* line 201, ../sass/custom_styles.sass */
+/* line 202, ../sass/custom_styles.sass */
+.project-descr h4 {
+  color: #e6dedc;
+}
+
+/* line 205, ../sass/custom_styles.sass */
 .job-descr {
   display: inline-block;
   font-size: 0.85em;
@@ -279,7 +284,7 @@ a:hover, a:focus {
   word-spacing: 0.6em;
 }
 
-/* line 208, ../sass/custom_styles.sass */
+/* line 212, ../sass/custom_styles.sass */
 .techs-used {
   display: inline-block;
   font-size: 0.85em;
@@ -289,7 +294,7 @@ a:hover, a:focus {
   margin-right: 0.5em;
 }
 
-/* line 216, ../sass/custom_styles.sass */
+/* line 220, ../sass/custom_styles.sass */
 .techs-list {
   font-size: 0.85em;
   display: inline-block;
