--- a/site/styles/custom_styles.css
+++ b/site/styles/custom_styles.css
@@ -300,3 +300,8 @@ a:hover, a:focus {
   display: inline-block;
   margin-bottom: 0;
 }
+
+/* line 225, ../sass/custom_styles.sass */
+#phone-number {
+  font-size: 0.5em;
+}
