--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -4,6 +4,13 @@
   <script type="text/javascript">
 
     $(document).ready(function() {
+      // Let's slip into something a little more comfortable...
+      if ((document.referrer.indexOf('magnarelli.sexy') > -1) && (self != top)) {
+        $('body').addClass('sexy-background')
+        $('body').removeClass('background')
+      }
+      // Only include single page grow/shrink stuff if we're not in the blog
+      {% if page.url == '/index.html' %}
       // Do the cool name thing
       $('body').addClass('page-loaded');
 
@@ -14,14 +21,13 @@
       } else {
         $('#homepage-display').removeClass('small-home');
       }
+      {% endif %}
 
-      // Let's slip into something a little more comfortable...
-      if ((document.referrer.indexOf('magnarelli.sexy') > -1) && (self != top)) {
-        $('body').addClass('sexy-background')
-        $('body').removeClass('background')
-      }
+
     })
 
+    // Only include single page grow/shrink stuff if we're not in the blog
+    {% if page.url == '/index.html' %}
     // Navigation
     $('#name-header').click(function() { 
                           $('#homepage-display').removeClass('small-home');
@@ -33,6 +39,7 @@
                                     $('.content-container').removeClass('current-content');
                                     $('#' + target).addClass('current-content');
                                   });
+    {% endif %}
   </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
