--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-<div class="post">
+{% include top_nav.html %}
+<div class="post content-container current-content">
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
