--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <meta name="description" content="{{ site.description }}">
+    <meta name="description" content="
+    {% if page.excerpt %}
+    {{ page.excerpt }}
+    {% else %}
+    {{ site.description }}
+    {% endif %}">
     <meta name="viewport" content="width=device-width">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
