--- a/styles/custom_styles.css
+++ b/styles/custom_styles.css
@@ -151,6 +151,45 @@ h1, h2, h3, h4, h5, h6, h7 {
 }
 
 /* line 116, ../sass/custom_styles.sass */
+.content-container {
+  display: inline-block;
+  display: none;
+  color: #e6dedc;
+  font-size: 1.3em;
+}
+/* line 117, ../sass/custom_styles.sass */
+.content-container.current-content {
+  display: block;
+  text-align: justify;
+}
+
+/* line 125, ../sass/custom_styles.sass */
+.thingy {
+  position: relative;
+}
+
+/* line 128, ../sass/custom_styles.sass */
+.nav-text {
+  margin-bottom: 2em;
+}
+
+/* line 132, ../sass/custom_styles.sass */
+.page-loaded .nav-help-text {
+  transition: transform 500ms;
+  transition: -ms-transform 500ms;
+  transition: -webkit-transform 500ms;
+}
+/* line 136, ../sass/custom_styles.sass */
+.page-loaded .nav-text {
+  transition: transform 500ms;
+  transition: -ms-transform 500ms;
+  transition: -webkit-transform 500ms;
+}
+/* line 140, ../sass/custom_styles.sass */
+.page-loaded h1#homepage-display.small-home {
+  transition: font-size 300ms;
+}
+/* line 143, ../sass/custom_styles.sass */
 .page-loaded #name-header span {
   opacity: 1;
   transition: -webkit-transform 1350ms, opacity 1200ms;
@@ -162,97 +201,67 @@ h1, h2, h3, h4, h5, h6, h7 {
   -ms-transform: translateZ(0) translateY(0);
   -o-transform: translateZ(0) translateY(0);
 }
-
-/* line 127, ../sass/custom_styles.sass */
-.content-container {
-  display: inline-block;
-  display: none;
-  color: #e6dedc;
-  font-size: 1.3em;
-}
-/* line 128, ../sass/custom_styles.sass */
-.content-container.current-content {
-  display: block;
-  text-align: justify;
+/* line 154, ../sass/custom_styles.sass */
+.page-loaded .small-home #name-header span {
+  transition: none;
 }
 
-/* line 136, ../sass/custom_styles.sass */
-.thingy {
-  position: relative;
-}
-
-/* line 139, ../sass/custom_styles.sass */
-.nav-help-text {
-  transition: transform 500ms;
-  transition: -ms-transform 500ms;
-  transition: -webkit-transform 500ms;
-}
-
-/* line 144, ../sass/custom_styles.sass */
-.nav-text {
-  transition: transform 500ms;
-  transition: -ms-transform 500ms;
-  transition: -webkit-transform 500ms;
-  margin-bottom: 2em;
-}
-
-/* line 151, ../sass/custom_styles.sass */
-a:hover, a:focus {
-  color: #e6dedc;
+/* line 159, ../sass/custom_styles.sass */
+a:hover, a:color {
+  focus: #e6dedc;
   cursor: auto;
 }
 
-/* line 155, ../sass/custom_styles.sass */
+/* line 163, ../sass/custom_styles.sass */
 #homepage-display {
   margin-bottom: 3%;
   padding-bottom: 1%;
   margin-top: 18%;
 }
 
-/* line 160, ../sass/custom_styles.sass */
+/* line 168, ../sass/custom_styles.sass */
 .page-loaded > #homepage-display {
   transition: margin-top 1000ms;
 }
 
-/* line 163, ../sass/custom_styles.sass */
+/* line 171, ../sass/custom_styles.sass */
 #homepage-display.small-home {
   margin-top: 0;
   background-color: rgba(0, 0, 0, 0.3);
 }
-/* line 166, ../sass/custom_styles.sass */
+/* line 174, ../sass/custom_styles.sass */
 #homepage-display.small-home h1 {
   font-size: 1.7em;
-  transition: font-size 300ms;
 }
 
-/* line 170, ../sass/custom_styles.sass */
+/* line 177, ../sass/custom_styles.sass */
 #where-container {
   margin-top: 5%;
   font-size: 4rem;
   opacity: 0.7;
 }
-/* line 171, ../sass/custom_styles.sass */
+/* line 178, ../sass/custom_styles.sass */
 #where-container a {
   color: black;
 }
-/* line 173, ../sass/custom_styles.sass */
+/* line 180, ../sass/custom_styles.sass */
 #where-container a:hover {
   color: #333333;
 }
 
-/* line 179, ../sass/custom_styles.sass */
+/* line 186, ../sass/custom_styles.sass */
 .row.info-listing {
   background: #444444;
   /*border-radius: 0.15em; */
   margin-bottom: 1em;
   padding: 0.5em;
 }
-/* line 184, ../sass/custom_styles.sass */
+/* line 191, ../sass/custom_styles.sass */
 .row.info-listing > .large-4 {
   text-align: center;
 }
 
-/* line 187, ../sass/custom_styles.sass */
+/* line 194, ../sass/custom_styles.sass */
 .logo {
   width: 100%;
   height: 100%;
@@ -261,7 +270,7 @@ a:hover, a:focus {
   margin-bottom: 0.3em;
 }
 
-/* line 194, ../sass/custom_styles.sass */
+/* line 201, ../sass/custom_styles.sass */
 .screencap {
   width: 100%;
   height: 100%;
@@ -270,12 +279,17 @@ a:hover, a:focus {
   margin-bottom: 0.3em;
 }
 
-/* line 202, ../sass/custom_styles.sass */
+/* line 209, ../sass/custom_styles.sass */
 .project-descr h4 {
   color: #e6dedc;
 }
 
-/* line 205, ../sass/custom_styles.sass */
+/* line 213, ../sass/custom_styles.sass */
+.post-header h3 {
+  color: #e6dedc;
+}
+
+/* line 216, ../sass/custom_styles.sass */
 .job-descr {
   display: inline-block;
   font-size: 0.85em;
@@ -284,7 +298,7 @@ a:hover, a:focus {
   word-spacing: 0.1em;
 }
 
-/* line 212, ../sass/custom_styles.sass */
+/* line 223, ../sass/custom_styles.sass */
 .techs-used {
   display: inline-block;
   font-size: 0.85em;
@@ -294,19 +308,24 @@ a:hover, a:focus {
   margin-right: 0.5em;
 }
 
-/* line 220, ../sass/custom_styles.sass */
+/* line 231, ../sass/custom_styles.sass */
 .techs-list {
   font-size: 0.85em;
   display: inline-block;
   margin-bottom: 0;
 }
 
-/* line 225, ../sass/custom_styles.sass */
+/* line 236, ../sass/custom_styles.sass */
 #phone-number {
   font-size: 0.3em;
 }
 
-/* line 228, ../sass/custom_styles.sass */
+/* line 239, ../sass/custom_styles.sass */
 .post-link {
   font-size: 1.3em;
+}
+
+/* line 242, ../sass/custom_styles.sass */
+.post-header {
+  border-bottom: 1px solid #e6dedc;
 }
