--- a/sass/custom_styles.sass
+++ b/sass/custom_styles.sass
@@ -22,6 +22,10 @@ body
   background-color: rgb(230, 222, 220)
 
 .background
+  a
+    &:hover, &:focus
+      color: rgb(230, 222, 220)
+      cursor: auto
   background-color: #252525
 
 .sexy-background
@@ -154,11 +158,6 @@ h1, h2, h3, h4, h5, h6, h7
   .small-home #name-header span
     transition: none
 
-
-a
-  &:hover, &:color
-    focus: rgb(230, 222, 220)
-    cursor: auto
 
 #homepage-display
   margin-bottom: 3%
