Build and style blog categories links and categories listing pages

--- a/sass/custom_styles.sass
+++ b/sass/custom_styles.sass
@@ -240,3 +240,15 @@ h1, h2, h3, h4, h5, h6, h7
 
 .post-header
   border-bottom: 1px solid #e6dedc
+
+.row.post-information
+  margin-top: 0.3em
+  .blog-category-link
+    margin-left: 0.25em
+    margin-right: 0.25em
+    padding-left: 0.2em
+    padding-right: 0.2em
+    background-color: rgba(0, 0, 0, 0.5)
+
+.category-name
+  color: #EFEFEF
