--- a/styles/custom_styles.css
+++ b/styles/custom_styles.css
@@ -328,3 +328,21 @@ h1, h2, h3, h4, h5, h6, h7 {
 .post-header {
   border-bottom: 1px solid #e6dedc;
 }
+
+/* line 244, ../sass/custom_styles.sass */
+.row.post-information {
+  margin-top: 0.3em;
+}
+/* line 246, ../sass/custom_styles.sass */
+.row.post-information .blog-category-link {
+  margin-left: 0.25em;
+  margin-right: 0.25em;
+  padding-left: 0.2em;
+  padding-right: 0.2em;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* line 253, ../sass/custom_styles.sass */
+.category-name {
+  color: #efefef;
+}
