Remove sample post, change styling, add sections to site config, add sitemap.xml template

--- a/sass/custom_styles.sass
+++ b/sass/custom_styles.sass
@@ -252,3 +252,8 @@ h1, h2, h3, h4, h5, h6, h7
 
 .category-name
   color: #EFEFEF
+
+// Make headings in the blog look right
+.post
+  h1, h2, h3, h4, h5, h6, h7,
+    color: #e6e6e6
