--- a/sass/custom_styles.sass
+++ b/sass/custom_styles.sass
@@ -211,6 +211,7 @@ h1, h2, h3, h4, h5, h6, h7
 .post-header
   h3
     color: #e6dedc
+    text-align: left
 
 .job-descr
   display: inline-block
@@ -249,11 +250,19 @@ h1, h2, h3, h4, h5, h6, h7
     padding-left: 0.2em
     padding-right: 0.2em
     background-color: rgba(0, 0, 0, 0.5)
+    margin-top: 0.25em
+    display: inline-block
+    border-radius: 2px
 
 .category-name
   color: #EFEFEF
 
 // Make headings in the blog look right
 .post
+  word-spacing: 0.1em
+  ol, ul
+    list-style: disc inside
+  h1, h2, h3, h4, h5
+    margin-top: 2em
   h1, h2, h3, h4, h5, h6, h7,
     color: #e6e6e6
