--- a/styles/custom_styles.css
+++ b/styles/custom_styles.css
@@ -286,9 +286,10 @@ h1, h2, h3, h4, h5, h6, h7 {
 /* line 212, ../sass/custom_styles.sass */
 .post-header h3 {
   color: #e6dedc;
+  text-align: left;
 }
 
-/* line 215, ../sass/custom_styles.sass */
+/* line 216, ../sass/custom_styles.sass */
 .job-descr {
   display: inline-block;
   font-size: 0.85em;
@@ -297,7 +298,7 @@ h1, h2, h3, h4, h5, h6, h7 {
   word-spacing: 0.1em;
 }
 
-/* line 222, ../sass/custom_styles.sass */
+/* line 223, ../sass/custom_styles.sass */
 .techs-used {
   display: inline-block;
   font-size: 0.85em;
@@ -307,47 +308,62 @@ h1, h2, h3, h4, h5, h6, h7 {
   margin-right: 0.5em;
 }
 
-/* line 230, ../sass/custom_styles.sass */
+/* line 231, ../sass/custom_styles.sass */
 .techs-list {
   font-size: 0.85em;
   display: inline-block;
   margin-bottom: 0;
 }
 
-/* line 235, ../sass/custom_styles.sass */
+/* line 236, ../sass/custom_styles.sass */
 #phone-number {
   font-size: 0.3em;
 }
 
-/* line 238, ../sass/custom_styles.sass */
+/* line 239, ../sass/custom_styles.sass */
 .post-link {
   font-size: 1.3em;
 }
 
-/* line 241, ../sass/custom_styles.sass */
+/* line 242, ../sass/custom_styles.sass */
 .post-header {
   border-bottom: 1px solid #e6dedc;
 }
 
-/* line 244, ../sass/custom_styles.sass */
+/* line 245, ../sass/custom_styles.sass */
 .row.post-information {
   margin-top: 0.3em;
 }
-/* line 246, ../sass/custom_styles.sass */
+/* line 247, ../sass/custom_styles.sass */
 .row.post-information .blog-category-link {
   margin-left: 0.25em;
   margin-right: 0.25em;
   padding-left: 0.2em;
   padding-right: 0.2em;
   background-color: rgba(0, 0, 0, 0.5);
+  margin-top: 0.25em;
+  display: inline-block;
+  border-radius: 2px;
 }
 
-/* line 253, ../sass/custom_styles.sass */
+/* line 257, ../sass/custom_styles.sass */
 .category-name {
   color: #efefef;
 }
 
-/* line 258, ../sass/custom_styles.sass */
+/* line 261, ../sass/custom_styles.sass */
+.post {
+  word-spacing: 0.1em;
+}
+/* line 263, ../sass/custom_styles.sass */
+.post ol, .post ul {
+  list-style: disc inside;
+}
+/* line 265, ../sass/custom_styles.sass */
+.post h1, .post h2, .post h3, .post h4, .post h5 {
+  margin-top: 2em;
+}
+/* line 267, ../sass/custom_styles.sass */
 .post h1, .post h2, .post h3, .post h4, .post h5, .post h6, .post h7 {
   color: #e6e6e6;
 }
