--- a/sass/custom_styles.sass
+++ b/sass/custom_styles.sass
@@ -258,7 +258,7 @@ h1, h2, h3, h4, h5, h6, h7
   color: #EFEFEF
 
 // Make headings in the blog look right
-.post
+article
   word-spacing: 0.1em
   ol, ul
     list-style: disc inside
