--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,14 +9,9 @@
     {{ site.description }}
     {% endif %}">
     <meta name="viewport" content="width=device-width">
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link href="/styles/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-    <link href="/styles/print.css" media="print" rel="stylesheet" type="text/css" />
-
-    <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/foundation.css">
-    <link rel="stylesheet" href="/styles/custom_styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <link href='http://fonts.googleapis.com/css?family=Voces' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
